[package]
name = "dup-indexer"
version = "0.3.2"
description = "Create a non-duplicated index from Strings, static str, Vec, or Box values"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/dup-indexer"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["index", "string", "intern", "duplicate", "unique"]
categories = ["algorithms", "data-structures"]
rust-version = "1.60.0"

[dependencies]

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }

[workspace]
# Use `just bench` or `cargo bench -p bench` to run the benchmarks.
members = ["bench"]
