[package]
name = "dup-indexer"
version = "0.4.1"
description = "Create a non-duplicated index from Strings, static str, Vec, or Box values"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/dup-indexer"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["index", "string", "intern", "duplicate", "unique"]
categories = ["algorithms", "data-structures"]
rust-version = "1.60.0"

[dependencies]
[dev-dependencies]

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
explicit_deref_methods = "allow"

[workspace]
# Use `just bench` or `cargo bench -p bench` to run the benchmarks.
members = ["bench"]
